--- a/frontend/mini-amazon/package.json
+++ b/frontend/mini-amazon/package.json
@@ -11,13 +11,16 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.0"
+    "semantic-ui-react": "^2.0.0",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
