--- a/frontend/mini-amazon/package.json
+++ b/frontend/mini-amazon/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.2",
     "email-validator": "^2.0.4",
     "formik": "^2.2.0",
+    "imgur-file-upload": "^1.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
